--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -42,7 +42,7 @@ author_profile: true
     <div class="row">
       <div class="col-md-4 column project">
         <h4 class="hackname">Automotive AR HUD Design</h4>
-          <h5 class="link"><a href={{ site.url }}/assets/pdf/AutoARHUD.pdf"><i class="fa fa-share"></i> PDF</a></h5>
+          <h5 class="link"><a href={{ site.url }}/assets/pdf/AutoARHUD.pdf><i class="fa fa-share"></i> PDF</a></h5>
         </h5>
         <hr>
         <p>The University of Pittsburgh is severely lacking in terms of the amount of data it makes open to the public. The Pitt API is a Python API aimed at allowing people to interface with scraped (and de-obfuscated) Pitt data, such as course data, computer lab data, and (a very hard fought battle) laundry machine data.</p>
