--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -45,9 +45,11 @@ author_profile: true
           <h5 class="link"><a href={{ site.url }}/assets/pdf/AutoARHUD.pdf><i class="fa fa-share"></i> PDF</a></h5>
         </h5>
         <hr>
-        <p>The University of Pittsburgh is severely lacking in terms of the amount of data it makes open to the public. The Pitt API is a Python API aimed at allowing people to interface with scraped (and de-obfuscated) Pitt data, such as course data, computer lab data, and (a very hard fought battle) laundry machine data.</p>
-        <span class="label label-info"><i class="fa fa-code"></i> Python</span>
+        <p>A feasibility study detailing efforts to design an AR HUD with a single freeform surface</p>
+        <span class="label label-success"> CodeV</span>
       </div>
+
+
       <div class="col-md-4 column project">
         <h4 class="hackname">CardboardVision</h4>
         <h5 class="link"><a href="https://github.com/RitwikGupta/CardboardVision"><i class="fa fa-github"></i> GitHub</a>
