--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -51,32 +51,27 @@ author_profile: true
 
 
       <div class="col-md-4 column project">
-        <h4 class="hackname">CardboardVision</h4>
-        <h5 class="link"><a href="https://github.com/RitwikGupta/CardboardVision"><i class="fa fa-github"></i> GitHub</a>
+        <h4 class="hackname">Fluorescence Spectroscopy Collection Objective Subassembly</h4>
+        <h5 class="link"><a href={{ site.url }}/assets/pdf/FluorescenceSpectroscopyCollectionObjective.pdf><i class="fa fa-share"></i> PDF</a>
         </h5>
         <hr>
-        <p>CardboardVision was a hack made at TartanHacks 2015. The goal was to give visually-impaired people their depth perception back using split depth techniques. To do this, we used CV techniques of optical flow, background/foreground segmentation,
-          and corner detection. This could also be used to create 3D videos at a low cost.</p>
-        <span class="label label-info"><i class="fa fa-code"></i> Python</span>
-        <span class="label label-success"><i class="fa fa-eye"></i> OpenCV</span>
-        <span class="label label-warning"><i class="fa fa-google"></i> Cardboard</span>
+        <p>This report details the design, optimization, and viability of a fluorescence spectroscopy collection objective subassembly.</p>
+        <span class="label label-success"> CodeV</span>
       </div>
+
+
       <div class="col-md-4 column project-right">
-        <h4 class="hackname">OuijaBot</h4>
-        <h5 class="link"><a href="https://github.com/RitwikGupta/OuijaSpeech"><i class="fa fa-github"></i> GitHub</a>
-        </h5>
-        <h5 class="link"><a href="http://challengepost.com/software/ouijabot-of7ax"><i class="fa fa-share"></i> ChallengePost</a>
+        <h4 class="hackname">Grating Fiber Demultiplexer</h4>
+        <h5 class="link"><a href={{ site.url}}/assets/pdf/GratingFiberDemultiplexer.pdf ><i class="fa fa-share"></i> PDF</a>
         </h5>
         <hr>
-        <p>OuijaBot was made at YHack 2014. Ouija boards are a fake way to communicate with the spirit world, so following the Halloween theme of YHack, my team and I developed a robot that you could talk to and it would actually answer your question by
-          spelling the answer out with a laser.</p>
-        <span class="label label-info"><i class="fa fa-code"></i> Python</span>
-        <span class="label label-danger"><i class="fa fa-google"></i> Speech-to-Text</span>
-        <span class="label label-warning"><i class="fa fa-cog"></i> Arduino</span>
-        <span class="label label-warning"><i class="fa fa-cog"></i> Intel Galileo</span>
+        <p>A grating spectrometer was designed for a biomedical instrument to demultiplex a multimode fiber.</p>
+        <span class="label label-success"> OpticStudio</span>
       </div>
     </div>
     <hr>
+
+
     <div class="row">
       <div class="col-md-4 column project">
         <h4 class="hackname">Crowdfree</h4>
@@ -88,6 +83,8 @@ author_profile: true
         <span class="label label-info"><i class="fa fa-code"></i> Java</span>
         <span class="label label-success"><i class="fa fa-coffee"></i> Spark</span>
       </div>
+
+
       <div class="col-md-4 column project">
         <h4 class="hackname">TeslaJarvis</h4>
         <h5 class="link"><a href="https://github.com/RitwikGupta/TeslaJarvis"><i class="fa fa-github"></i> GitHub</a>
