--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -75,7 +75,7 @@ author_profile: true
     <div class="row">
       <div class="col-md-4 column project">
         <h4 class="hackname">Plane Wave Simulator</h4>
-        <h5 class="link"><a href="https://github.com/AdamBriggs/OPT212PlaneWavePropagation"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>
+        <h5 class="link"><a href="https://github.com/AdamBriggs/OPT212PlaneWavePropagation"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
         </h5>
         <hr>
         <p>This GUI displays the electric field propagation through up to four media. It takes into consideration fTIR.</p>
@@ -85,7 +85,7 @@ author_profile: true
 
       <div class="col-md-4 column project">
         <h4 class="hackname">Far Field Diffraction Simulator</h4>
-        <h5 class="link"><a href="https://github.com/AdamBriggs/Far-Field-Diffraction-Visualization"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>
+        <h5 class="link"><a href="https://github.com/AdamBriggs/Far-Field-Diffraction-Visualization"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
         </h5>
         <hr>
         <p>This script simulates the far-field Fraunhofer diffraction patterns of different apertures. </p>
