--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -46,7 +46,7 @@ author_profile: true
         </h5>
         <hr>
         <p>A feasibility study detailing efforts to design an AR HUD with a single freeform surface</p>
-        <span class="label label-success"> CodeV</span>
+        <span class="label label-success"><i class="fa fa-code" aria-hidden="true"></i> CodeV</span>
       </div>
 
 
@@ -56,7 +56,7 @@ author_profile: true
         </h5>
         <hr>
         <p>This report details the design, optimization, and viability of a fluorescence spectroscopy collection objective subassembly.</p>
-        <span class="label label-success"> CodeV</span>
+        <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> CodeV</span>
       </div>
 
 
@@ -66,7 +66,7 @@ author_profile: true
         </h5>
         <hr>
         <p>A grating spectrometer was designed for a biomedical instrument to demultiplex a multimode fiber.</p>
-        <span class="label label-success"> OpticStudio</span>
+        <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> OpticStudio</span>
       </div>
     </div>
     <hr>
@@ -98,7 +98,7 @@ author_profile: true
         </h5>
         <hr>
         <p> This project details a comprehensive mentrology of multiple optical components.</p>
-        <span class="label label-success"> CodeV</span>
+        <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> CodeV</span>
         <span class="label label-warning"><i class="fa fa-cog" aria-hidden='true'></i> Spectrophotometry</span>
         <span class="label label-warning"><i class="fa fa-cog" aria-hidden='true'></i> Interferometry</span>
         <span class="label label-warning"><i class="fa fa-cog" aria-hidden='true'></i> MTF</span>
