--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -42,7 +42,7 @@ author_profile: true
     <div class="row">
       <div class="col-md-4 column project">
         <h4 class="hackname">Automotive AR HUD Design</h4>
-          <h5 class="link"><a href={{ site.url }}/assets/pdf/AutoARHUD.pdf><i class="fa fa-share"></i> PDF</a></h5>
+          <h5 class="link"><a href="{{ site.url }}/assets/pdf/AutoARHUD.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a></h5>
         </h5>
         <hr>
         <p>A feasibility study detailing efforts to design an AR HUD with a single freeform surface</p>
@@ -52,7 +52,7 @@ author_profile: true
 
       <div class="col-md-4 column project">
         <h4 class="hackname">Fluorescence Spectroscopy Collection Objective Subassembly</h4>
-        <h5 class="link"><a href={{ site.url }}/assets/pdf/FluorescenceSpectroscopyCollectionObjective.pdf><i class="fa fa-share"></i> PDF</a>
+        <h5 class="link"><a href="{{ site.url }}/assets/pdf/FluorescenceSpectroscopyCollectionObjective.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
         <hr>
         <p>This report details the design, optimization, and viability of a fluorescence spectroscopy collection objective subassembly.</p>
@@ -62,7 +62,7 @@ author_profile: true
 
       <div class="col-md-4 column project-right">
         <h4 class="hackname">Grating Fiber Demultiplexer</h4>
-        <h5 class="link"><a href={{ site.url}}/assets/pdf/GratingFiberDemultiplexer.pdf ><i class="fa fa-share"></i> PDF</a>
+        <h5 class="link"><a href="{{ site.url}}/assets/pdf/GratingFiberDemultiplexer.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
         <hr>
         <p>A grating spectrometer was designed for a biomedical instrument to demultiplex a multimode fiber.</p>
@@ -94,7 +94,7 @@ author_profile: true
 
       <div class="col-md-4 column project-right">
         <h4 class="hackname">Metrology of Singlet and Doublet</h4>
-        <h5 class="link"><a href={{ site.url}} /assets/pdf/OpticsMetrology.pdf><i class="fa fa-share"></i> PDF</a>
+        <h5 class="link"><a href="{{ site.url}} /assets/pdf/OpticsMetrology.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
         <hr>
         <p> This project details a comprehensive mentrology of multiple optical components.</p>
