--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -42,11 +42,11 @@ author_profile: true
     <div class="row">
       <div class="col-md-4 column project">
         <h4 class="hackname">Automotive AR HUD Design</h4>
-          <h5 class="link"><a href="{{ site.url }}/assets/pdf/AutoARHUD.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a></h5>
+          <h5 class="link"><a href="{{ site.url }}/assets/pdf/AutoARHUD.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a> <span class="label label-default">2020</span>
         </h5>
         <hr>
-        <p>A feasibility study detailing efforts to design an AR HUD with a single freeform surface</p>
-        <span class="label label-success"><i class="fa fa-code" aria-hidden="true"></i> CodeV</span>
+        <p> This is my final project for my graduate lens design course. My team conducted a feasibility study attempting to design an automotive AR HUD with a single freeform surface. </p>
+        <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> CodeV</span>
       </div>
 
 
@@ -55,7 +55,8 @@ author_profile: true
         <h5 class="link"><a href="{{ site.url }}/assets/pdf/FluorescenceSpectroscopyCollectionObjective.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
         <hr>
-        <p>This report details the design, optimization, and viability of a fluorescence spectroscopy collection objective subassembly.</p>
+        <p>This report details the design, optimization, and viability of a fluorescence spectroscopy collection objective subassembly. This was my first
+           intensive lens design process where I went through a full design and iteration process.</p>
         <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> CodeV</span>
       </div>
 
@@ -65,7 +66,7 @@ author_profile: true
         <h5 class="link"><a href="{{ site.url}}/assets/pdf/GratingFiberDemultiplexer.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
         <hr>
-        <p>A grating spectrometer was designed for a biomedical instrument to demultiplex a multimode fiber.</p>
+        <p> A system level design was conducted to lay out a grating spectrometer that connects with a multimode fiber. The report overviews the first order layout for this biomedical instrument. </p>
         <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> OpticStudio</span>
       </div>
     </div>
@@ -78,7 +79,7 @@ author_profile: true
         <h5 class="link"><a href="https://github.com/AdamBriggs/OPT212PlaneWavePropagation" target="_blank"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
         </h5>
         <hr>
-        <p>This GUI displays the electric field propagation through up to four media. It takes into consideration fTIR.</p>
+        <p>This GUI displays the electric field propagation through up to four media. It takes into consideration fTIR and allows the user to control the incident angle and wavelength. </p>
         <span class="label label-info"><i class="fa fa-code"></i> MATLAB</span>
       </div>
 
@@ -88,7 +89,7 @@ author_profile: true
         <h5 class="link"><a href="https://github.com/AdamBriggs/Far-Field-Diffraction-Visualization" target="_blank" ><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
         </h5>
         <hr>
-        <p>This script simulates the far-field Fraunhofer diffraction patterns of different apertures. </p>
+        <p>Far-field Fraunhofer diffraction patterns of different apertures are simulated. This project examines how the fourier  </p>
         <span class="label label-info"><i class="fa fa-code"></i> MATLAB</span>
       </div>
 
