--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -42,9 +42,9 @@ author_profile: true
     <div class="row">
       <div class="col-md-4 column project">
         <h4 class="hackname">Automotive AR HUD Design</h4>
+        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i>2020</span>
           <h5 class="link"><a href="{{ site.url }}/assets/pdf/AutoARHUD.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
-        <span class="label label-default">2020</span>
         <hr>
         <p> This is my final project for my graduate lens design course. My team conducted a feasibility study attempting to design an automotive AR HUD with a single freeform surface. </p>
         <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> CodeV</span>
@@ -53,9 +53,9 @@ author_profile: true
 
       <div class="col-md-4 column project">
         <h4 class="hackname">Fluorescence Spectroscopy Collection Objective Subassembly</h4>
+        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i>2020</span>
         <h5 class="link"><a href="{{ site.url }}/assets/pdf/FluorescenceSpectroscopyCollectionObjective.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
-        <span class="label label-default">2020</span>
         <hr>
         <p>This report details the design, optimization, and viability of a fluorescence spectroscopy collection objective subassembly. This was my first
            intensive lens design process where I went through a full design and iteration process.</p>
@@ -65,9 +65,9 @@ author_profile: true
 
       <div class="col-md-4 column project-right">
         <h4 class="hackname">Grating Fiber Demultiplexer</h4>
+        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i>2019</span>
         <h5 class="link"><a href="{{ site.url}}/assets/pdf/GratingFiberDemultiplexer.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
-        <span class="label label-default">2019</span>
         <hr>
         <p> A system level design was conducted to lay out a grating spectrometer that connects with a multimode fiber. The report overviews the first order layout for this biomedical instrument. </p>
         <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> OpticStudio</span>
@@ -79,9 +79,9 @@ author_profile: true
     <div class="row">
       <div class="col-md-4 column project">
         <h4 class="hackname">Plane Wave Simulator</h4>
+        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i>2019</span>
         <h5 class="link"><a href="https://github.com/AdamBriggs/OPT212PlaneWavePropagation" target="_blank"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
         </h5>
-        <span class="label label-default">2019</span>
         <hr>
         <p>This GUI displays the electric field propagation through up to four media. It takes into consideration fTIR and allows the user to control the incident angle and wavelength. </p>
         <span class="label label-info"><i class="fa fa-code"></i> MATLAB</span>
@@ -90,9 +90,9 @@ author_profile: true
 
       <div class="col-md-4 column project">
         <h4 class="hackname">Far Field Diffraction Simulator</h4>
+        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i>2018</span>
         <h5 class="link"><a href="https://github.com/AdamBriggs/Far-Field-Diffraction-Visualization" target="_blank" ><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
         </h5>
-        <span class="label label-default">2018</span>
         <hr>
         <p>Far-field Fraunhofer diffraction patterns of different apertures are simulated. This project examines how the fourier  </p>
         <span class="label label-info"><i class="fa fa-code"></i> MATLAB</span>
@@ -100,9 +100,9 @@ author_profile: true
 
       <div class="col-md-4 column project-right">
         <h4 class="hackname">Metrology of Singlet and Doublet</h4>
+        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i>2020</span>
         <h5 class="link"><a href="{{ site.url}} /assets/pdf/OpticsMetrology.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
-        <span class="label label-default">2020</span>
         <hr>
         <p> This project details a comprehensive mentrology of multiple optical components.</p>
         <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> CodeV</span>
