--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -115,7 +115,7 @@ author_profile: true
     <div class="row">
       <div class="col-md-12 column project-right">
         <h4 class="hackname">Group Creativity: Less Than the Sum of its Parts</h4>
-        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i> 2019</span><hr>
+        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i> 2019</span>
         <h5 class="link"><a href="{{ site.url}}/assets/pdf/CASPoster.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
           <h5 class="link"><a href="https://github.com/AdamBriggs/Geometric-Optics-Data-Analysis/tree/master/RProject" target="_blank"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
         <p> While being a TA for Geometric Optics, I was able to study pedagogical teaching styles. My research group explored the efficiacy between individual and group
