--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -104,7 +104,7 @@ author_profile: true
         <h5 class="link"><a href="{{ site.url}}/assets/pdf/OpticsMetrology.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
         <hr>
-        <p> This project details a comprehensive mentrology of multiple optical components.</p>
+        <p> This project details a comprehensive metrology of multiple optical components. Analyses conducted using: Zygo NewView, Zygo VeriFire, Konica-Minolta Spectrophotometer, and Optikos LensCheck. </p>
         <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> CodeV</span>
         <span class="label label-warning"><i class="fa fa-cog" aria-hidden='true'></i> Spectrophotometry</span>
         <span class="label label-warning"><i class="fa fa-cog" aria-hidden='true'></i> Interferometry</span>
