--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -51,8 +51,8 @@ author_profile: true
       </div>
 
 
-      <div class="col-md-4 column project">
-        <h4 class="hackname">Fluorescence Spectroscopy Collection Objective Subassembly</h4>
+     <div class="col-md-4 column project">
+       <h4 class="hackname">Fluorescence Spectroscopy Collection Objective Subassembly</h4>
         <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i> 2020</span>
         <h5 class="link"><a href="{{ site.url }}/assets/pdf/FluorescenceSpectroscopyCollectionObjective.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
@@ -94,7 +94,7 @@ author_profile: true
         <h5 class="link"><a href="https://github.com/AdamBriggs/Far-Field-Diffraction-Visualization" target="_blank" ><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
         </h5>
         <hr>
-        <p>Far-field Fraunhofer diffraction patterns of different apertures are simulated. This project examines how the fourier  </p>
+        <p>Far-field Fraunhofer diffraction patterns of different apertures are simulated. This project examines how the fourier transform interacts with diffraction theory. </p>
         <span class="label label-info"><i class="fa fa-code"></i> MATLAB</span>
       </div>
 
