--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -30,6 +30,7 @@ author_profile: true
       $(".column").height(maxHeight);
     });
   </script>
+
   <div class="container" style="width: 100%; height: 100vh;">
     <div class="row text-center">
       <h5>Label Key</h5>
@@ -64,13 +65,13 @@ author_profile: true
 
 
       <div class="col-md-4 column project-right">
-        <h4 class="hackname">Grating Fiber Demultiplexer</h4>
-        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i> 2019</span>
-        <h5 class="link"><a href="{{ site.url}}/assets/pdf/GratingFiberDemultiplexer.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
+        <h4 class="hackname">Review of Q-Type Polynomials</h4>
+        <span class="label label-default"><i class="fa fa-calendar" aria-hidden="true"></i> 2020</span>
+        <h5 class="link"><a href="{{ site.url}}/assets/pdf/QPoly.pdf" target="_blank"><i class="fa fa-share"></i> PDF</a>
         </h5>
         <hr>
-        <p> A system level design was conducted to lay out a grating spectrometer that connects with a multimode fiber. The report overviews the first order layout for this biomedical instrument. </p>
-        <span class="label label-success"><i class="fa fa-cube" aria-hidden="true"></i> OpticStudio</span>
+        <p> Literature review detailing the derivation, applied use, and future work of Qbfs and Qcon definition for aspheres. </p>
+        <span class="label label-warning"><i class="fa fa-cog" aria-hidden='true'></i> Aspherics</span>
       </div>
     </div>
     <hr>
